--- a/PythonPractice_github/fourthweek31032025_04042025.ipynb
+++ b/PythonPractice_github/fourthweek31032025_04042025.ipynb
@@ -1179,6 +1179,243 @@
    "source": [
     "obj.totalsum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3dbaaaa2-5df0-410e-9a9e-5c58cdcb3619",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTkinter is the inbuilt python module that is used to create GUI applications. \\nIt is one of the most commonly used modules for creating GUI applications \\nin Python as it is simple and easy to work with.\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#03-04-2025\n",
+    "#tkinter -\n",
+    "'''\n",
+    "Tkinter is the inbuilt python module that is used to create GUI applications. \n",
+    "It is one of the most commonly used modules for creating GUI applications \n",
+    "in Python as it is simple and easy to work with.\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b55d60e3-f7a0-4c49-8d61-2ea33b31de63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Basic python ui\")\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9323cb8-4112-4408-8043-a6594665c78a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "deef5f17-7478-47dd-9094-46ba0072813a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "01431ebd-b4b8-49cc-843b-2bd9872b0298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "def fun():\n",
+    "    Label.config(text = \"You Clicked Me\")\n",
+    "\n",
+    "button = tk.Button(window, text = \"Click Here !!!\" , command = fun)\n",
+    "button.pack(pady = 10)\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "efcdef35-6db0-4889-a53f-2b1d930a70f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "def fun():\n",
+    "    Label.config(text = f\" Hello, Mr. {entry.get()}\")\n",
+    "\n",
+    "entry = tk.Entry(window, width = 20)\n",
+    "entry.pack()\n",
+    "\n",
+    "button = tk.Button(window, text = \"Click Here !!!\" , command = fun)\n",
+    "button.pack(pady = 10)\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a1358ae2-e757-4cea-922e-8cffcc84f64d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "spin = ttk.Spinbox(window, from_=0, to = 15, wrap = True)\n",
+    "spin.pack()\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "376e4e91-5db6-41c5-acee-fe08e5661892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "\n",
+    "window.title(\"GUI practice\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "Label = tk.Label(window, text = \"Hello This is python Tkinter GUI\", font = ('Arial', 14))\n",
+    "Label.pack()\n",
+    "\n",
+    "def hello():\n",
+    "    messagebox.showinfo(\"Python want to send message\")\n",
+    "\n",
+    "button = tk.Button(window, text = \"Click Here\", command = hello)\n",
+    "button.pack()\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5be37e91-03aa-450c-adef-9353e31a2a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "window.title(\"This is my first GUI\")\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "grap = tk.Canvas(window, width = 400, height = 250 , bg = \"gray\")\n",
+    "grap.pack(pady=10)\n",
+    "grap.create_rectangle(170,240,250,175, fill = \"red\")\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c1b40bb2-d905-4bad-abd0-b8e3f0a61c05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter.ttk import Combobox\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "window.title(\"This is Dropdown Box\")\n",
+    "window.geometry(\"600x500\")\n",
+    "\n",
+    "combo = Combobox(window, values = [\"apple\",\"orange\",\"banana\",\"kiwi\"])\n",
+    "combo.set(\"Choose Your Fruit\")\n",
+    "combo.pack(pady = 20)\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "783db621-efbf-4641-a246-8a6341e0c23e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#04-04-2025\n",
+    "#own practice in eveninng: 0:00 pm to 0:00 pm"
+   ]
   }
  ],
  "metadata": {
