--- a/PythonPractice_github/numpy/numpylibrary.ipynb
+++ b/PythonPractice_github/numpy/numpylibrary.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "724a1e96-9132-443a-b943-7e1975a0886b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#27-03-2025 : started with basics of numpy and some practices"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a181211c-ab64-4696-aaa5-31fb024f8e07",
    "metadata": {},
@@ -638,6 +648,282 @@
     "print()\n",
     "print(np.std(arr1))\n",
     "print(np.std(arr2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33edef73-c4b5-464c-8bcb-3d1c8ced9f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#04-04-2025:continue on\n",
+    "#recaps of basics and go on\n",
+    "\n",
+    "'''\n",
+    "what,why, when of numpy?\n",
+    "\n",
+    "1.What is NumPy?\n",
+    "\n",
+    "*NumPy (Numerical Python) is a powerful Python library used for numerical computing.\n",
+    "It provides support for large, multi-dimensional arrays and matrices, along with a \n",
+    "collection of mathematical functions to perform operations efficiently.\n",
+    "\n",
+    "2.Why Use NumPy?\n",
+    "\n",
+    "*Performance: NumPy is much faster than Python lists due to its optimized \n",
+    "C-based implementation.\n",
+    "\n",
+    "*Memory Efficiency: Uses less memory than Python lists.\n",
+    "\n",
+    "*Convenient Array Operations: Allows element-wise operations without loops.\n",
+    "\n",
+    "*Scientific Computing: Provides tools for linear algebra, random number generation, \n",
+    "and more.\n",
+    "\n",
+    "*Interoperability: Works well with libraries like Pandas, SciPy, and scikit-learn.\n",
+    "\n",
+    "3.When Should You Use NumPy?\n",
+    "\n",
+    "*When working with large datasets (e.g., millions of rows of numbers).\n",
+    "\n",
+    "*For mathematical and statistical operations (e.g., mean, standard deviation).\n",
+    "\n",
+    "*When performing linear algebra (e.g., matrix multiplication, eigenvalues).\n",
+    "\n",
+    "*For scientific simulations (e.g., physics, machine learning, AI).\n",
+    "\n",
+    "*To replace slow Python loops with fast vectorized operations.\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ef29569c-1abd-46fa-bde0-a925e9b2a6e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# create arrays\n",
+    "\n",
+    "arr = np.array([1,2,3,4,5])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7c38f0a8-9c77-407a-947a-dbdf073e8f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n",
+      "int64\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shape of the array\n",
+    "print(arr.shape)  \n",
+    "# Data type of elements\n",
+    "print(arr.dtype)  \n",
+    "# Number of elements\n",
+    "print(arr.size)   \n",
+    "# Number of dimensions\n",
+    "print(arr.ndim)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3bd60654-b0b5-4d04-a61f-da7fcf00faa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3x3 matrix of zeros  \n",
+    "np.zeros((3,3))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "33690302-b8d7-458b-b408-a8dfd15ad598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1.],\n",
+       "       [1., 1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2x2 matrix of ones  \n",
+    "np.ones((2,2))      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "065734f8-1cc9-41be-9671-01571af344e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numbers from 1 to 9 with step of 2  \n",
+    "np.arange(1, 10, 2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d8f866fd-718f-4bc0-ba52-8719fdd580dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5., 10., 15., 20., 25., 30., 35., 40., 45., 50.])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5 equally spaced numbers from 1 to 10  \n",
+    "np.linspace(5, 50, 10) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6b8e76ec-3e91-44aa-806e-6c9e82f63ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshapes to 3x2\n",
+    "arr = np.array([[1,2,3], [4,5,6]])\n",
+    "print(arr.reshape(3,2))  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eec280c1-c315-46be-8dfc-dd2a9491858a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 9]\n",
+      "[-3 -3 -3]\n",
+      "[ 4 10 18]\n",
+      "[0.25 0.4  0.5 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "\n",
+    "print(a + b)   # Element-wise addition\n",
+    "print(a - b)   # Element-wise subtraction\n",
+    "print(a * b)   # Element-wise multiplication\n",
+    "print(a / b)   # Element-wise division\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f175a9b8-9f3e-4aee-8351-76c336324c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "3.0\n",
+      "1.4142135623730951\n",
+      "15\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "print(np.mean(arr))   # Mean\n",
+    "print(np.median(arr)) # Median\n",
+    "print(np.std(arr))    # Standard deviation\n",
+    "print(np.sum(arr))    # Sum of elements\n",
+    "print(np.var(arr))    #variance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eae3bba-bfb2-45b5-a041-82fc5c4127bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#05-04-2025:continue from 1d2d3darrays"
    ]
   }
  ],
