--- a/PythonPractice_github/fifthweek07042025_11042025.ipynb
+++ b/PythonPractice_github/fifthweek07042025_11042025.ipynb
@@ -246,6 +246,540 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb6e7a2b-0ca6-46a4-b192-3d877dc031c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 08-04-2025\n",
+    "\n",
+    "#dateandtime \n",
+    "# threading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c3ca0d7-ff72-4c94-ae25-1f07d1cfa639",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 4, 9, 18, 44, 26, 864427)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
+    "\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "573bb81d-97db-4ad3-aea4-15ab5dfd4335",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4ca87cda-9ffa-49d3-a4a8-1a8f755be3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8918944a-0255-48e9-91b2-3ff766c0f05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1feaa04f-eca3-4653-9df5-463be8b548ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the year 25 month 04 date 09'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.strftime(\"the year %y month %m date %d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dbb5a669-66ec-4cd5-8862-f285f3e73b55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.strftime(\"%A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "66fc3e9e-27d6-4418-a77d-bf4322030654",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'April'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.strftime(\"%B\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9d69262f-5480-4d1b-bf30-0a09b862426b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(days=118)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "date1 = date(2024,12,12)\n",
+    "date2 = date(2025,4,9)\n",
+    "\n",
+    "date2-date1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1b33d074-4387-404b-bec0-fddc11d3a40e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Saturday'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = datetime(2025,4,12)\n",
+    "\n",
+    "date.strftime(\"%A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "068dfcfd-144b-40b1-b0dd-9475a0c082de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 8, 18, 51, 56, 679139)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#adding days to a date\n",
+    "\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "today = datetime.today()\n",
+    "\n",
+    "upcoming90 = timedelta(days =90)\n",
+    "\n",
+    "today+upcoming90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "abe3a520-6544-4a2d-99f9-aaeacd950569",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "lt = time.localtime()\n",
+    "lt.tm_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e0cab2b4-7038-40b1-87b9-287b13f9fc18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lt.tm_mon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "38bc092b-53aa-4512-9e07-f7152233a298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'18: 54: 33'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time.strftime(\"%H: %M: %S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74a1ac2-5cf3-4984-b6ba-e44fd7e99f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.strftime(\"%H: %M: %S\", lt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8b31deab-ca28-4e7a-bfc0-4f3bc5cc872e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1744205216.9187362"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = time.time()\n",
+    "obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1e82da75-96dc-48de-8fb8-f94d2da6634c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed Apr  9 18:56:56 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(time.ctime(obj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1471fde3-d36d-4795-9ffd-69680b498a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19: 01: 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "#digital clock\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "while True:\n",
+    "    laptop_time = time.localtime()\n",
+    "\n",
+    "    print(time.strftime(\"%H: %M: %S\",laptop_time))\n",
+    "    time.sleep(3)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0a350497-db61-4de1-beb7-ff5194af069e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5316574573516846\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculating the execution time of a program\n",
+    "\n",
+    "st = time.time()\n",
+    "\n",
+    "for i in range(100000000):\n",
+    "    pass\n",
+    "\n",
+    "et = time.time()\n",
+    "\n",
+    "print(et - st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "42c4197d-a137-453b-a07c-d70a8c76ec61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student number is  0\n",
+      "Student number is  1\n",
+      "Student number is  2\n",
+      "Student number is  3\n",
+      "Student number is  4\n",
+      "Student number is  5\n",
+      "Student number is  6\n",
+      "Student number is  7\n",
+      "Student number is  8\n",
+      "Student number is  9\n",
+      "Student mark is  300\n",
+      "Student mark is  310\n",
+      "Student mark is  320\n",
+      "Student mark is  330\n",
+      "Student mark is  340\n",
+      "Student mark is  350\n",
+      "Student mark is  360\n",
+      "Student mark is  370\n",
+      "Student mark is  380\n",
+      "Student mark is  390\n"
+     ]
+    }
+   ],
+   "source": [
+    "def student_count():\n",
+    "    for i in range(10):\n",
+    "        print(\"Student number is \",i)\n",
+    "        time.sleep(1)\n",
+    "def student_mark():\n",
+    "    for i in range(300,400, 10):\n",
+    "        print(\"Student mark is \",i)\n",
+    "        time.sleep(1)\n",
+    "student_count()\n",
+    "student_mark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6fa13c8d-e6ba-44e5-8e3d-8c274ceb9a5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student number is  0\n",
+      "Student mark is  300\n",
+      "Student number is  1\n",
+      "Student mark is  310\n",
+      "Student mark is Student number is  2\n",
+      " 320\n",
+      "Student mark is Student number is  3\n",
+      " 330\n",
+      "Student number is  4\n",
+      "Student mark is  340\n",
+      "Student number is Student mark is  350\n",
+      " 5\n",
+      "Student mark is  360\n",
+      "Student number is  6\n",
+      "Student mark is  370\n",
+      "Student number is  7\n",
+      "Student number is Student mark is  380\n",
+      " 8\n",
+      "Student number is Student mark is  390\n",
+      " 9\n",
+      "10.017608404159546\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "\n",
+    "st = time.time()\n",
+    "\n",
+    "def student_count():\n",
+    "    for i in range(10):\n",
+    "        print(\"Student number is \",i)\n",
+    "        time.sleep(1)\n",
+    "def student_mark():\n",
+    "    for i in range(300,400, 10):\n",
+    "        print(\"Student mark is \",i)\n",
+    "        time.sleep(1) \n",
+    "        \n",
+    "t1 = threading.Thread(target = student_count)\n",
+    "t2 = threading.Thread(target = student_mark)\n",
+    "\n",
+    "\n",
+    "\n",
+    "t1.start() \n",
+    "t2.start()\n",
+    "t1.join()\n",
+    "t2.join()\n",
+    "\n",
+    "\n",
+    "et = time.time()\n",
+    "print(et - st)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9262fba4-35bc-49f8-92ae-ce5e74a20beb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#09-04-2025\n",
+    "#\n",
+    "#"
+   ]
   }
  ],
  "metadata": {
