--- a/PythonPractice_github/fifthweek07042025_11042025.ipynb
+++ b/PythonPractice_github/fifthweek07042025_11042025.ipynb
@@ -777,8 +777,361 @@
    "outputs": [],
    "source": [
     "#09-04-2025\n",
-    "#\n",
-    "#"
+    "#regularexpressionmodule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9ddd5e25-0a96-403d-a76e-b43e8683cd06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"^python\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7a64d34-ab0c-4e48-82d9-040ec937a8df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['independent']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"independent$\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f0e50c06-c7f0-4e45-bb49-2390c990387e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and', 'an', 'and']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"and*\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ed52fbd0-1f06-42c2-95ac-ea9dbf4bc622",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ett']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"et{2}\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dc1cb1de-9f63-4115-91af-685200f144ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and dynamic programming language and also platform independent']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"and.*\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "171882d4-5449-4c36-ac90-5f23f8479cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'e', 'e', 'd', 'a', 'd', 'd', 'a', 'c', 'a', 'a', 'a', 'e', 'a', 'd', 'a', 'a', 'f', 'd', 'e', 'e', 'd', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"python is interpretted and dynamic programming language and also platform independent\"\n",
+    "\n",
+    "print(re.findall(\"[a-f]\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6e30109b-5f2a-4f3c-b92a-0bbe3f2772f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"1.python is interpretted and dynamic programming language and also 2.platform independent\"\n",
+    "\n",
+    "print(re.findall(\"[0-9]\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8e905279-e989-4f79-a89f-f33de2c2d98c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['11:00', '5:00', '6:00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.findall(\"[0-9]*[:][0-9]*\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b8956b65-4f22-4b0f-b0f9-8a4cb848962d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.search(\"sleep\", txt).span())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3f249161-27e3-48b3-b59a-95dd3be72c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['11:00 am is best ', ' ', ' sleep and 5:00 am - 6:00 am is ', ' wake up']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.split(r\"\\bt\\w*\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f4dc9a0a-13f2-4231-97ae-8184de0b6a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['11:00 am is best ', ' ', ' sleep and 5:00 am - 6:00 am is ', ' wake up']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "ans = re.split(r\"\\bt\\w*\", txt)\n",
+    "\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "38b1d78c-2373-4536-aa2a-1155196e1ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['time', 'to', 'to']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.findall(r\"\\bt\\w*\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "67b3d1e5-c1db-4e97-a7b3-89a2f5ddbcce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['11:00', 'am', 'is', 'best', 'time', 'to', 'sleep', 'and', '5:00', 'am', '-', '6:00', 'am', 'is', 'to', 'wake', 'up']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Senthil Kumar\\AppData\\Local\\Temp\\ipykernel_14932\\2246038935.py:3: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  print(re.split(\"\\s\", txt))\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.split(\"\\s\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c641eabd-3ca4-4436-adbc-346b02ec11ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['11:00', 'am', 'is', 'best', 'time', 'to', 'sleep', 'and', '5:00', 'am', '-', '6:00', 'am', 'is', 'to', 'wake', 'up']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.split(\" \", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "749cdc18-6b3c-4efa-b5ea-bd9ab48a7b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11:00 am is best time to sleep and 5:00 am - 6:00 am is to woke up\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "txt = \"11:00 am is best time to sleep and 5:00 am - 6:00 am is to wake up\"\n",
+    "\n",
+    "print(re.sub(\"wake\",\"woke\", txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27cec11e-06ae-4fb5-97f7-8d4821d816a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#10-04-2025\n",
+    "# numpy library\n",
+    "# "
    ]
   }
  ],
